--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: reditor_example
+name: richField_example
 description: A demo app showcasing the rich_field_controller package in action.
 publish_to: "none"
 
