--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: ${{ matrix.flutter_version }}
+          flutter-version: 2.12.0
+
+      - run: flutter pub get
       - run: flutter analyze
       # - run: flutter format --dry-run --set-exit-if-changed .
       - run: flutter test
