--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
         with:
           channel: ${{ matrix.flutter_version }}
           version: 2.5.3
+      - run: flutter clean
+      - run: flutter pub get
       - run: flutter analyze
       - run: flutter format --dry-run --set-exit-if-changed .
       - run: flutter test
