--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: rich_field_controller
-description: A rich text field controller to be used with Flutter TextField.
+description: A rich text field controller that turns any Flutter TextField into an wysiwyg filed.
 version: 0.1.1
 repository: "https://github.com/yaitmou/rich_field_controller.git"
 homepage: "https://github.com/yaitmou/rich_field_controller.git"
