Updated Flutter to >= 3.7.0 and removed (commented) the RichSelectionControls as it's depricated.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,11 +1,12 @@
 name: rich_field_example
 description: A demo app showcasing the rich_field_controller package in action.
-publish_to: "none"
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.3.0 <4.0.0'
+  flutter: '>=3.7.0'
 
 dependencies:
   flutter:
