--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ build/
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
+
+
+# Custom ignores
+claude_prompt.md
