--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,12 @@ environment:
 
 dependencies:
   collection: null
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
-  replay_bloc: ^0.2.7
+  get_it: ^8.0.3
+  replay_bloc: ^0.3.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
